fix: fix book's description padding to be aligned with that of header

--- a/src/sass/pages/_book-view.scss
+++ b/src/sass/pages/_book-view.scss
@@ -253,7 +253,7 @@
       }
 
       @include respond(phone) {
-        padding: var(--space-1) var(--space-2);
+        padding: var(--space-1) var(--space-3);
         width: 100%;
       }
 
